# VirtualScanner

./: 1280icosphere.ply  CMakeLists.txt  Carm_isocenter_G4View.ply  functions.cpp  scanenr.files  scanenr.includes  viewRays.txt  viewpoints2.ply  virtual_scanner  virtual_scanner.cpp
